# clj-analyzer

./: Cargo.toml  Makefile
src/: analyzer.rs  main.rs  parser.rs
src/analyzer/: analysis.rs  mod.rs  syntax_error.rs
src/rules/: mod.rs  readable_condition.rs  redundant_let.rs  unused_local_variables.rs
