[package]
name = "clj-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.4", features = ["derive"] }
edn-rs = "0.17.4"
nom = "7.1.1"
nom_locate = "4.0.0"
pretty_assertions = "1.3.0"
